# BaseCppCmakeProject

./: CMakeLists.txt  README.md
nbproject/: configurations.xml  project.xml
nbproject/private/: Debug.properties  configurations.xml  private.xml
src/: CMakeLists.txt  common.cpp  common.h  config.h  config.h.in  main.cpp  main.h
